fix collapse bug

--- a/public/stylesheet/landing.css
+++ b/public/stylesheet/landing.css
@@ -50,7 +50,7 @@ h1 {
 
 }
 .slideshow li:nth-child(2) {
-    background-image: url(https://images.unsplash.com/photo-1448317846460-907988886b33?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80);
+    background-image: url(https://images.unsplash.com/photo-1499537233661-da4ca50391f5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80);
 
     animation-delay: 5s;
 }
